# MCPScanner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  batch_scan.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mcpscanner/: __init__.py  capabilities.py  cli.py  core.py  models.py  report.py
mcpscanner/agent/: __init__.py  attack_agent.py  backends.py  gate.py  goals.py  judge.py  llm.py  mcp_client.py
mcpscanner/ingestion/: __init__.py  base.py  config_file.py  live_server.py
mcpscanner/modules/: __init__.py  agentic_probe.py  base.py  description_poison.py  live_probe.py  multi_step_probe.py  privilege_bleed.py  schema_injection.py  scope_creep.py  tool_argument_injection.py  tool_chain_abuse.py
tests/: test_agentic.py  test_integration.py  test_live_execution.py  test_modules.py
tests/fixtures/: config_clean.json  config_poisoned.json  poisoned_config.json  server_callable.py  server_clean.py  server_poisoned.py
