[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpscanner"
version = "0.1.0"
description = "Agentic security scanner for Model Context Protocol servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcpscan = "mcpscanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpscanner*"]
